miniextendr-macros/tests/ui/impl_r6_deep_clone_wrong_system.stderr
error: `deep_clone` is only valid for R6 class systems
  --> tests/ui/impl_r6_deep_clone_wrong_system.rs:10:23
   |
10 |     #[miniextendr(env(deep_clone))]
   |                       ^^^^^^^^^^
